<?xml version="1.0"?>
<package format="2">
  <name>daruma_description</name>
  <version>0.0.0</version>
  <description>The daruma_description package</description>

  <maintainer email="tgrip@todo.todo">tgrip</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>rviz</exec_depend>

  <export>

  </export>
</package>
